--- a/components/_service.scss
+++ b/components/_service.scss
@@ -1,15 +1,23 @@
 .service {
     padding: 40px 0 0;
     background-color: $color-bg;
+    @include media-tablet {
+        padding: 0 0 32px;
+    }
 }
 .service__block {
     display: flex;
     align-items: center;
+    @include media-tablet {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 
 .service__logo {
     max-width: 306px;
     margin: 0 0;
+    
 }
 .box-radius {
     border: 1px solid #E3E1D5;
@@ -17,6 +25,9 @@ border-radius: 0 0 20px 20px;
 }
 .service__tags {
     padding-left: 142px;
+    @include media-tablet {
+        padding-left: 0;
+    }
 }
 .service__image {
     background-image: url(../Img/Service/Cactus.jpg);
@@ -25,6 +36,15 @@ border-radius: 0 0 20px 20px;
 }
 .position_block {
     padding-bottom: 121px;
+    @include media-tablet {
+        padding-bottom: 38px;
+    }
+}
+.text__main {
+    color: $color-green;
+    @include media-tablet {
+        margin-top: 30px;
+    }
 }
 .title {
     color: $color-orange;
