--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,7 @@
 @import "base/typography";
 @import "base/tag";
 @import "base/select";
+@import "base/hamburger";
 
 // ========== Components ========== //
 @import "components/buttons";
