--- a/abstracts/_constants.scss
+++ b/abstracts/_constants.scss
@@ -11,4 +11,5 @@ $input-active: #C1E698;
 
 $content-width: 1222px;
 $tablet-width: 768px;
-$mobile-width: 380px;
+$mobile-big-width: 414px;
+$mobile-small-width: 320px;
