--- a/layout/_footer.scss
+++ b/layout/_footer.scss
@@ -1,14 +1,32 @@
-.footer_logo {
-    display: flex;
+.footer {
     padding: 40px 0;
+    @include media-laptop {
+        padding: 33px 0 18px;
+    }
+}
+.footer__wrapper {
+    display: flex;
+}
+.footer_navigation {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    @include media-laptop {
+        flex-direction: column;
+        :not(:last-child) {
+            margin-bottom: 16px;
+        }
+    }
 }
 .gh_logo {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; 
+
 }
 .logo_text {
     @include font( $size:2rem, $height:5rem);   
+    text-decoration: none;
 }
 .pad {
     padding-right: 20px;
