--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ input[type=checkbox], input[type=radio] {
   transition: all 0.3s ease-out;
 }
 
-.contact-us__text, .tools__text, .button_price, .tag, .text__main, h2 {
+.contact-us__text, .tools__text, .button_price, .tag, h2 {
   font-family: "Inika", serif;
 }
 
@@ -257,12 +257,28 @@ h1 {
   font-size: 4.5rem;
   line-height: 5rem;
 }
+@media (max-width: 1222px) {
+  h1 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 3.5rem;
+    line-height: 5rem;
+  }
+}
 
 h2 {
   font-style: normal;
   font-weight: 400;
-  font-size: 4rem;
-  line-height: 5.2rem;
+  font-size: 3.5rem;
+  line-height: 5rem;
+}
+@media (max-width: 1222px) {
+  h2 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 3.5rem;
+    line-height: 4.6rem;
+  }
 }
 
 h3 {
@@ -272,6 +288,14 @@ h3 {
   line-height: 5rem;
   color: #000000;
 }
+@media (max-width: 1222px) {
+  h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2.5rem;
+    line-height: 3.5rem;
+  }
+}
 
 h4 {
   font-style: normal;
@@ -280,13 +304,13 @@ h4 {
   line-height: 4.8rem;
   color: #000000;
 }
-
-.text__main {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 4rem;
-  line-height: 5.2rem;
-  color: #499A18;
+@media (max-width: 1222px) {
+  h4 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 3.5rem;
+    line-height: 4.2rem;
+  }
 }
 
 .tags {
@@ -325,6 +349,42 @@ h4 {
 
 .select_list:not(:last-child) {
   margin-bottom: 32px;
+}
+
+.hamburger__line, .hamburger:after, .hamburger:before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  border-radius: 5px;
+  background-color: #717171;
+  height: 3px;
+  width: 100%;
+}
+
+.hamburger {
+  display: none;
+  position: relative;
+  width: 40px;
+  height: 24px;
+  margin-right: 30px;
+}
+@media (max-width: 414px) {
+  .hamburger {
+    display: inline-block;
+  }
+}
+.hamburger:before {
+  top: 0;
+  left: 0;
+}
+.hamburger:after {
+  bottom: 0;
+  left: 0;
+}
+
+.hamburger__line {
+  top: calc(50% - 1.5px);
+  left: 0;
 }
 
 .button {
@@ -383,9 +443,16 @@ h4 {
   color: #E06733;
 }
 
+@media (max-width: 414px) {
+  .header__navigation {
+    display: none;
+  }
+}
+
 .promo {
   background-color: #EDF2EC;
   padding: 62px 0 0;
+  overflow: hidden;
 }
 
 .promo__wrapper {
@@ -394,12 +461,36 @@ h4 {
   align-items: center;
 }
 
+.promo__adapt {
+  display: flex;
+}
+@media (max-width: 768px) {
+  .promo__adapt {
+    flex-direction: row-reverse;
+  }
+}
+
 .promo__image {
   max-width: 448.8px;
+}
+@media (max-width: 768px) {
+  .promo__image {
+    max-width: 280px;
+    max-height: 254x;
+    padding-left: 42px;
+  }
 }
 
 .promo__content {
   padding-left: 224px;
+}
+@media (max-width: 768px) {
+  .promo__content {
+    padding-left: 0;
+  }
+  .promo__content :not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .promo__title {
@@ -418,9 +509,22 @@ h4 {
   color: #636060;
   max-width: 526px;
 }
+@media (max-width: 1222px) {
+  .promo__text {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.5rem;
+  }
+}
 
 .promo__buttons {
   margin: 48px 0 94px;
+}
+@media (max-width: 1222px) {
+  .promo__buttons {
+    margin-top: 0;
+  }
 }
 
 .tools {
@@ -431,10 +535,22 @@ h4 {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 1222px) {
+  .tools__wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 .tools__content {
   max-width: 605px;
   padding-top: 161px;
+}
+@media (max-width: 1222px) {
+  .tools__content {
+    margin-top: 40px;
+    padding: 0;
+  }
 }
 
 .tools__text {
@@ -444,6 +560,12 @@ h4 {
   line-height: 5.2rem;
   color: #499A18;
   max-width: 463px;
+}
+@media (max-width: 1222px) {
+  .tools__text {
+    margin: 0 auto;
+    text-align: center;
+  }
 }
 .tools__text_mod {
   color: #E06733;
@@ -460,19 +582,55 @@ h4 {
   line-height: 3rem;
   color: #636060;
 }
+@media (max-width: 1222px) {
+  .tools__subtitle {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.9rem;
+    line-height: 3rem;
+    text-align: start;
+  }
+}
 
 .tools__image {
   padding: 93px 0 94px;
+}
+@media (max-width: 1222px) {
+  .tools__image {
+    padding-top: 40px;
+  }
+}
+
+.houseplant__img {
+  width: 464px;
+  height: 479px;
+}
+@media (max-width: 1222px) {
+  .houseplant__img {
+    width: 250px;
+    height: 258px;
+  }
 }
 
 .service {
   padding: 40px 0 0;
   background-color: #EDF2EC;
 }
+@media (max-width: 768px) {
+  .service {
+    padding: 0 0 32px;
+  }
+}
 
 .service__block {
   display: flex;
   align-items: center;
+}
+@media (max-width: 768px) {
+  .service__block {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .service__logo {
@@ -488,6 +646,11 @@ h4 {
 .service__tags {
   padding-left: 142px;
 }
+@media (max-width: 768px) {
+  .service__tags {
+    padding-left: 0;
+  }
+}
 
 .service__image {
   background-image: url(../Img/Service/Cactus.jpg);
@@ -497,6 +660,20 @@ h4 {
 
 .position_block {
   padding-bottom: 121px;
+}
+@media (max-width: 768px) {
+  .position_block {
+    padding-bottom: 38px;
+  }
+}
+
+.text__main {
+  color: #499A18;
+}
+@media (max-width: 768px) {
+  .text__main {
+    margin-top: 30px;
+  }
 }
 
 .title {
@@ -522,9 +699,19 @@ h4 {
 .price {
   padding-bottom: 115px;
 }
+@media (max-width: 768px) {
+  .price {
+    padding-bottom: 88px;
+  }
+}
 
 .text_price {
   text-align: start;
+}
+@media (max-width: 768px) {
+  .text_price {
+    margin-bottom: 0;
+  }
 }
 
 .price_column {
@@ -540,6 +727,13 @@ h4 {
   border: 1px solid #E3E1D5;
   border-radius: 20px;
   padding: 34px 41px;
+}
+@media (max-width: 768px) {
+  .list {
+    max-width: 332px;
+    max-height: 282px;
+    padding-top: 50px;
+  }
 }
 
 .basics__text {
@@ -566,6 +760,11 @@ h4 {
   text-align: end;
   margin-bottom: 38px;
 }
+@media (max-width: 768px) {
+  .gardeners_text {
+    margin-top: 139px;
+  }
+}
 
 .price_image {
   padding-top: 39px;
@@ -580,13 +779,39 @@ h4 {
   background-color: #EDF2EC;
   padding-top: 53px;
 }
+@media (max-width: 1222px) {
+  .contact-us {
+    padding-top: 0px;
+  }
+}
 
 .contact-us_wrapper {
   display: flex;
 }
+@media (max-width: 1222px) {
+  .contact-us_wrapper {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .contact-us_wrapper .contact-us_text {
+    order: 3;
+  }
+  .contact-us_wrapper .form_addapt {
+    order: 2;
+  }
+  .contact-us_wrapper .woman_image {
+    order: 1;
+  }
+}
 
 .contact-us_text {
   padding-left: 113px;
+}
+@media (max-width: 1222px) {
+  .contact-us_text {
+    margin: 0 auto;
+    padding-left: 0;
+  }
 }
 
 .contact-us__text {
@@ -602,6 +827,13 @@ h4 {
   margin-top: 95px;
   width: 100%;
 }
+@media (max-width: 1222px) {
+  .form {
+    padding-left: 0;
+    margin: 0 auto;
+    margin-top: 60px;
+  }
+}
 
 input {
   background-color: #D6E7D2;
@@ -616,9 +848,39 @@ input:focus {
   outline: 0;
 }
 
-.footer_logo {
-  display: flex;
+@media (max-width: 1222px) {
+  .woman {
+    max-width: 200px;
+    max-height: 248.49px;
+    padding-top: 250px;
+  }
+}
+
+.footer {
   padding: 40px 0;
+}
+@media (max-width: 1222px) {
+  .footer {
+    padding: 33px 0 18px;
+  }
+}
+
+.footer__wrapper {
+  display: flex;
+}
+
+.footer_navigation {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+}
+@media (max-width: 1222px) {
+  .footer_navigation {
+    flex-direction: column;
+  }
+  .footer_navigation :not(:last-child) {
+    margin-bottom: 16px;
+  }
 }
 
 .gh_logo {
@@ -632,6 +894,7 @@ input:focus {
   font-weight: 400;
   font-size: 2rem;
   line-height: 5rem;
+  text-decoration: none;
 }
 
 .pad {
@@ -674,6 +937,11 @@ input:focus {
 .wrapper {
   max-width: 1222px;
   margin: auto;
+}
+@media (max-width: 1222px) {
+  .wrapper {
+    padding: 0 50px;
+  }
 }
 
 .layout-3-column {
