--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -3,6 +3,9 @@ h1 {
     @include media-laptop {
         @include font ( $weight: 700, $size: 3.5rem, $height: 5rem)
     }
+    @include media-mobile {
+        @include font ( $weight: 700, $size: 2.5rem, $height: 3.5rem)
+    }
 }
 
 h2 {
@@ -10,6 +13,9 @@ h2 {
     @include font ( $size: 3.5rem, $height: 5rem);
     @include media-laptop {
         @include font ($size: 3.5rem, $height: 4.6rem)
+    }
+    @include media-mobile {
+        @include font ($size: 2.5rem, $height: 3.3rem)
     }
 }
 
@@ -20,6 +26,9 @@ h3 {
     @include media-laptop {
         @include font ($weight: 700, $size: 2.5rem, $height: 3.5rem)
     }
+    @include media-mobile {
+        @include font ($weight: 700, $size: 2rem, $height: 3.5rem)
+    }
 }
 
 h4 {
@@ -28,5 +37,8 @@ h4 {
     color: $color-black;
     @include media-laptop {
         @include font ($weight: 700, $size: 3.5rem, $height: 4.2rem)
+    }
+    @include media-mobile {
+        @include font ($weight: 700, $size: 2.5rem, $height: 3rem)
     }
 }
