--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -19,4 +19,8 @@
         border: 2px solid $color-orange;
         border-radius: 10px;
     }
+    @include media-mobile {
+        @include font ($size:1rem, $height:2rem);
+        padding: 8px 18px;
+    }
 }
