--- a/components/_price.scss
+++ b/components/_price.scss
@@ -3,12 +3,17 @@
     @include media-tablet {
         padding-bottom: 88px;
     }
+    @include media-mobile {
+        padding-bottom: 40px;
+    }
 }
 
-.text_price {
-    text-align: start;
+.text__price {
     @include media-tablet {
-        margin-bottom: 0;
+        margin-bottom: 50px;
+    }
+    @include media-mobile {
+        margin: 25px 0 40px;
     }
 }
 .price_column {
@@ -28,6 +33,10 @@
         max-height: 282px;
         padding-top: 50px 
     }
+    @include media-tablet {
+        max-width: 224px;
+        max-height: 235px;
+    }
 }
 
 .basics__text {
@@ -40,6 +49,10 @@
 .price_block {
     display: flex;
     justify-content: space-between;
+    @include media-mobile {
+        flex-direction: column;
+        text-align: center;
+    }
 }
 
 
@@ -48,6 +61,9 @@
     flex-direction: column;
     align-items: flex-end;
     max-width: 452px;
+    @include media-mobile {
+        align-items: center;
+    }
 }
 .gardeners_text {
     text-align: end;
@@ -55,9 +71,16 @@
     @include media-tablet {
         margin-top: 139px;
     }
+    @include media-mobile {
+        margin: 19px 0 14px;
+        text-align: center;
+    }
 }
 .price_image{
     padding-top: 39px;
+    @include media-mobile {
+        display: none;
+    }
 }
 .leafs {
     max-width: 152px;
