--- a/components/_promo.scss
+++ b/components/_promo.scss
@@ -2,6 +2,9 @@
     background-color: $color-bg;
     padding: 62px 0 0;
     overflow: hidden;
+    @include media-mobile {
+        padding: 24px 0;
+    }
 }
 .promo__wrapper {
     display: flex;
@@ -21,6 +24,9 @@
         max-height: 254x;
         padding-left: 42px;
     }
+    @include media-mobile {
+        display: none;
+    }
 }
 .promo__content {
     padding-left: 224px;
@@ -28,6 +34,11 @@
         padding-left: 0;
         :not(:last-child) {
             margin-bottom: 30px;
+        }
+    }
+    @include media-mobile {
+        :not(:last-child) {
+            margin-bottom: 20px;
         }
     }
 }
@@ -52,6 +63,9 @@
     margin: 48px 0 94px;
     @include media-laptop {
         margin-top: 0;
+    }
+    @include media-mobile {
+        margin: 0;
     }
 }
 
